box models properties are tested

--- a/HTML/dogs.html
+++ b/HTML/dogs.html
@@ -13,8 +13,9 @@
 </head>
 
 <body>
-    <h1>Dog</h1>
+    <h1 id="dog1" class="title">Dog</h1>
     <hr>
+    <h1 class="title">Cats</h1>
     <p>The dog (Canis familiaris[4][5] or Canis lupus familiaris[5]) is a domesticated descendant of the wolf. Also
         called the domestic dog, it is derived from extinct gray wolves,[6][7] and the gray wolf is the dog's closest
         living relative.[8] The dog was the first species to be domesticated[9][8] by humans. Experts estimate that
@@ -29,6 +30,17 @@
         aiding disabled people. Over the millennia, dogs became uniquely adapted to human behavior, and the human–canine
         bond has been a topic of frequent study.[13] This influence on human society has given them the sobriquet of
         "man's best friend".</p>
+
+    <input type="text" placeholder="name">
+    <input type="password" placeholder="password">
+
+    <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+        <li>Item 4</li>
+        <li>Item 5</li>
+    </ul>
 </body>
 
 </html>
